--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@formspree/react": "^2.5.4",
     "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
@@ -28,6 +29,7 @@
     "libphonenumber-js": "^1.11.15",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
+    "nodemailer": "^6.10.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
