--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "framer-motion": "^11.11.17",
     "libphonenumber-js": "^1.11.15",
     "lucide-react": "^0.460.0",
-    "next": "15.0.3",
+    "next": "^15.2.1-canary.5",
     "nodemailer": "^6.10.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
